litellm-rust/crates/traces/tests/snapshots/normalize__crewai_simple.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "openinference.instrumentation.openai",
    "name": "ChatCompletion",
    "display_name": "ChatCompletion",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "openai",
    "model": "openai/gpt-6-luna",
    "input_tokens": 73,
    "output_tokens": 107,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:chatcmpl-EUkddqKc662KIMwpIVEIprjRaILPs"
    ],
    "tool_call_id": "",
    "input_preview": "\nCurrent Task: What is an agent trace?\n\nThis is the expected criteria for your final answer: A short answer\nyou MUST return the actual complete content as the final answer, not a summary.\n\nProvide your complete response:"
  },
  {
    "scope": "openinference.instrumentation.crewai",
    "name": "research_agent._execute_core",
    "display_name": "research_agent._execute_core",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "crewai",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"agent\": {\"entity_type\": \"agent\", \"id\": \"15c0aa3d-ca59-4a11-8083-7743b8e7c2b2\", \"role\": \"research_agent\", \"goal\": \"Answer questions clearly\", \"backstory\": \"You explain technical concepts.\", \"cache\": true, \"verbose\": false, \"max_rpm\": null,"
  },
  {
    "scope": "openinference.instrumentation.crewai",
    "name": "research_crew.kickoff",
    "display_name": "research_crew.kickoff",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": true,
    "agent": "",
    "framework": "crewai",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"question\": \"What is an agent trace?\"}"
  }
]
