litellm-rust/crates/traces/tests/snapshots/normalize__deepagents_simple.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "PatchToolCallsMiddleware.before_agent",
    "display_name": "PatchToolCallsMiddleware.before_agent",
    "root": false,
    "observation_type": "framework",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "deepagents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "ChatOpenAI",
    "display_name": "ChatOpenAI",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_chat_model",
    "model": "openai/gpt-6-luna",
    "input_tokens": 1975,
    "output_tokens": 151,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "model",
    "display_name": "model",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "deepagents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "research_agent",
    "display_name": "research_agent",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "deepagents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  }
]
