litellm-rust/crates/traces/tests/snapshots/normalize__deepagents_swarm.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "PatchToolCallsMiddleware.before_agent",
    "display_name": "PatchToolCallsMiddleware.before_agent",
    "root": false,
    "observation_type": "framework",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "deepagents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "ChatOpenAI",
    "display_name": "ChatOpenAI",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_chat_model",
    "model": "openai/gpt-6-luna",
    "input_tokens": 2019,
    "output_tokens": 60,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_AJqUDRVUi8_Re-V5maLOEhmrn43mbcNn3wBZe_nRc7L6oDMGnFJljlyoF-B39EN4iQtdNOy1RzdTpUpwsW_4vhL3X6mU50BFzPYfFes4V0zeeqfOeAP_Sl-NgQ5GO_UMaZQBzxgxaz-cRCjyuvHM97c438GcIC6rJs70Hc9geAq69eEp9p6mGOajgOPn1nFvIm09pSMW51fPBdKLbD_Jm_aEILHXqXYrSZx4Uk8KRRYfbhPpt7wOlw4cAkh-iOdT1DldA1cfJ2-NJ20d217QVWKvg8N7pxxvNe2qPiGeKhbsCPDR09CvtuJiUH7G-0KXd1AVsmM5yeBzGri-FKpUGo9Nhqg2wM261gTr4TSJ8-Zr1M44gMslf00KsGNkUkAnHOqasIZMt1gbUYf9S_KKaCYK2sF7U8gIsRQqbyquVg0NEmvpvJN7Dh9pvy7Guzm31ucD15tX1-uEFNi5WJIro7Ij"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "model",
    "display_name": "model",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "deepagents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "PatchToolCallsMiddleware.before_agent",
    "display_name": "PatchToolCallsMiddleware.before_agent",
    "root": false,
    "observation_type": "framework",
    "wrapper_candidate": false,
    "agent": "search_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "ChatOpenAI",
    "display_name": "ChatOpenAI",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "search_agent",
    "framework": "langchain_chat_model",
    "model": "openai/gpt-6-luna",
    "input_tokens": 1666,
    "output_tokens": 390,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "Research the meaning of “agent trace.” Find a clear, reliable explanation, including what it typically records and why it is useful. Return concise factual notes and distinguish any ambiguity in the term."
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "model",
    "display_name": "model",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "search_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "Research the meaning of “agent trace.” Find a clear, reliable explanation, including what it typically records and why it is useful. Return concise factual notes and distinguish any ambiguity in the term."
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "search_agent",
    "display_name": "search_agent",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "search_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "Research the meaning of “agent trace.” Find a clear, reliable explanation, including what it typically records and why it is useful. Return concise factual notes and distinguish any ambiguity in the term."
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "task",
    "display_name": "task",
    "root": false,
    "observation_type": "tool",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "deepagents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"description\": \"Research the meaning of “agent trace.” Find a clear, reliable explanation, including what it typically records and why it is useful. Return concise factual notes and distinguish any ambiguity in the term.\", \"subagent_type\":"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "tools",
    "display_name": "tools",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "deepagents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "[{\"name\": \"task\", \"args\": {\"description\": \"Research the meaning of “agent trace.” Find a clear, reliable explanation, including what it typically records and why it is useful. Return concise factual notes and distinguish any ambiguity in th"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "ChatOpenAI",
    "display_name": "ChatOpenAI",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_chat_model",
    "model": "openai/gpt-6-luna",
    "input_tokens": 2339,
    "output_tokens": 184,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_0AHZwTDDnZea3eZO_gjea58imqHAQLttFiyneEEPvbUtODlFHlAZnN-aHxJ-K1knQanhWb11CM7kSMXscwCFctHQ9QSpvxrCO-cwahwg1Kf4cR46lEMAuOJJZkCO5ffIZiI4zlMbWfcJrE-CnxsqO5yNfEeJodDzV4ESD1NWJ7ETxCP-nZiLMk2MJiWgtEFmOqDoblIvJd5JlBa6PlWtry35Vm0qqykT9nwIa0OjgIRZfARSsRRMUyM5ozDViniVrkA7n4KHm_79ARImxTHSVymjJETwM3Ksy1PmoQcoLwuWNc9lQfwoKvGi8hWBwxJoIN0hgtE1BbxAL1aN_TlTcNtZTGsal6au3H01wVd4rENIdSkKUZq6sTnDhxoNwQSb0Hr-2s4mSZ-w7Osnh7sworon8jWEKRuHpeeRQcHDQEZ3zA9ARVzxwwhe2KwwIfwfu3GNfXUgxL_HV6PREwuTKNe1"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "model",
    "display_name": "model",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "deepagents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "PatchToolCallsMiddleware.before_agent",
    "display_name": "PatchToolCallsMiddleware.before_agent",
    "root": false,
    "observation_type": "framework",
    "wrapper_candidate": false,
    "agent": "writer_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "ChatOpenAI",
    "display_name": "ChatOpenAI",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "writer_agent",
    "framework": "langchain_chat_model",
    "model": "openai/gpt-6-luna",
    "input_tokens": 1790,
    "output_tokens": 144,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_SyoviW4WvWYq2Wx3ypoN_FFx67UfhzePGtguokahxxA_qK25SCK9f_LEhSPb9Q5U4t9ZEFZcBKZ_WqAJbzkng62tJ07_tD8XPq_s6p5pLaMk_B6lfhSjuCxIoCB_46R2Amvj8wpOF4MwDY4RqR7rwV8GPQ0uzHpkvWV2jv449ZaXNvWf0Sq1izI5KqrwU7YxDSR7mSReyoOgCUKQbVkJT0GLpLiMMWtj6bk07PZn5vkNbowur8wk87O7EH28vtrtu_7bEiGnr9DmLxs8YFRNp5TeTUWnWtIK5qdqcJjIQzsbU9ptY8W-Bve_C61Y78dP_GK8fzBgw8iLCT-t6h0VxXCRWYHZhD7Ih8VMFgHaXZ12U2p1WZIVUCVVLOe143Bb1oNzzKDpCkzedRLmCQro5JF2a16EEDgOnfZurmRH0FxdmDLgHKkYzE6zy9AW6VExSC4gVSBkUECj5U_vrjRDlVKt"
    ],
    "tool_call_id": "",
    "input_preview": "Using only these research facts, write a clear answer to the user's question, “What is an agent trace?” Explain the typical contents and purpose, note that the term can vary, and clarify it is not necessarily private chain-of-thought. Keep "
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "model",
    "display_name": "model",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "writer_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "Using only these research facts, write a clear answer to the user's question, “What is an agent trace?” Explain the typical contents and purpose, note that the term can vary, and clarify it is not necessarily private chain-of-thought. Keep "
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "writer_agent",
    "display_name": "writer_agent",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "writer_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "Using only these research facts, write a clear answer to the user's question, “What is an agent trace?” Explain the typical contents and purpose, note that the term can vary, and clarify it is not necessarily private chain-of-thought. Keep "
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "task",
    "display_name": "task",
    "root": false,
    "observation_type": "tool",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "deepagents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"description\": \"Using only these research facts, write a clear answer to the user's question, “What is an agent trace?” Explain the typical contents and purpose, note that the term can vary, and clarify it is not necessarily private chain-"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "tools",
    "display_name": "tools",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "deepagents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "[{\"name\": \"task\", \"args\": {\"description\": \"Using only these research facts, write a clear answer to the user's question, “What is an agent trace?” Explain the typical contents and purpose, note that the term can vary, and clarify it is not "
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "ChatOpenAI",
    "display_name": "ChatOpenAI",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_chat_model",
    "model": "openai/gpt-6-luna",
    "input_tokens": 2673,
    "output_tokens": 100,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_2u0YcWN1UrMKdKZKrzazuRsQZyhFMRAS_vTGAuA9Yjd-KMiXfHi93fETiyBuNIVO5brembvZP_ZsfVqjITwqCUfz50g-rhXncLGyyb2lLzCHnB5TED7Odj8jLXEdKJN0YyXAr1nst9hqO0YvjppoNmXCBie8EaeUIVgMEG_F1zYo1kZyAObspVLQwblXik4KipEDWLSVJhDQy6WvdQ7kctXvlo2eect4gF3eRABFjURXXRXZpCcJeMtFzVXyX0rjMWixsou8dndpesHVOszuvR23LX65CqOGjzrI42UrUrA6SCRpjziPVLjAd-a-CcbkWqOSmw1BvoxdtGjB6WQ9xv4HAUWIiL4hC87GRmDT_ffEYAkDf29fVtaMTHjTzflh8OMbpIAQgjsvaTdp_phQJ5rzxRvYL_va9edzCuDRh5qPeGsHvheO_cnR0ssApRkx515n4W7prJJ-5tUpKnjF7qNW"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "model",
    "display_name": "model",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "deepagents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "research_agent",
    "display_name": "research_agent",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "deepagents",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  }
]
