litellm-rust/crates/traces/tests/snapshots/normalize__deeplite_auth_error.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "langsmith",
    "name": "__start__",
    "display_name": "__start__",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "langgraph",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"messages\":[{\"role\":\"user\",\"content\":\"For a synthetic tracing fixture, explain Python tuple versus list immutability in at most 120 words. Use only official Python documentation if you search. Have the skeptic and verifier check it, then h"
  },
  {
    "scope": "langsmith",
    "name": "route_to_active_agent",
    "display_name": "route_to_active_agent",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "langgraph",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"messages\":[{\"content\":\"For a synthetic tracing fixture, explain Python tuple versus list immutability in at most 120 words. Use only official Python documentation if you search. Have the skeptic and verifier check it, then have the editor"
  },
  {
    "scope": "langsmith",
    "name": "ChatAnthropic",
    "display_name": "ChatAnthropic",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "researcher",
    "framework": "langchain_chat_model",
    "model": "claude-sonnet",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "For a synthetic tracing fixture, explain Python tuple versus list immutability in at most 120 words. Use only official Python documentation if you search. Have the skeptic and verifier check it, then have the editor write /answer.md. Keep t"
  },
  {
    "scope": "langsmith",
    "name": "UnsupportedContentMiddleware.wrap_model_call",
    "display_name": "UnsupportedContentMiddleware.wrap_model_call",
    "root": false,
    "observation_type": "framework",
    "wrapper_candidate": false,
    "agent": "researcher",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{}"
  },
  {
    "scope": "langsmith",
    "name": "FilesystemMiddleware.wrap_model_call",
    "display_name": "FilesystemMiddleware.wrap_model_call",
    "root": false,
    "observation_type": "framework",
    "wrapper_candidate": false,
    "agent": "researcher",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{}"
  },
  {
    "scope": "langsmith",
    "name": "model",
    "display_name": "model",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "researcher",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"messages\":[{\"content\":\"For a synthetic tracing fixture, explain Python tuple versus list immutability in at most 120 words. Use only official Python documentation if you search. Have the skeptic and verifier check it, then have the editor"
  },
  {
    "scope": "langsmith",
    "name": "researcher",
    "display_name": "researcher",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "researcher",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "For a synthetic tracing fixture, explain Python tuple versus list immutability in at most 120 words. Use only official Python documentation if you search. Have the skeptic and verifier check it, then have the editor write /answer.md. Keep t"
  },
  {
    "scope": "langsmith",
    "name": "researcher",
    "display_name": "researcher",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "langgraph",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"messages\":[{\"content\":\"For a synthetic tracing fixture, explain Python tuple versus list immutability in at most 120 words. Use only official Python documentation if you search. Have the skeptic and verifier check it, then have the editor"
  },
  {
    "scope": "langsmith",
    "name": "LangGraph",
    "display_name": "LangGraph",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "langgraph",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "{\"messages\":[{\"role\":\"user\",\"content\":\"For a synthetic tracing fixture, explain Python tuple versus list immutability in at most 120 words. Use only official Python documentation if you search. Have the skeptic and verifier check it, then h"
  },
  {
    "scope": "deeplite",
    "name": "deeplite.run",
    "display_name": "deeplite.run",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  }
]
