litellm-rust/crates/traces/tests/snapshots/normalize__google_adk_swarm.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "openinference.instrumentation.google_adk",
    "name": "call_llm",
    "display_name": "call_llm",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "search_agent",
    "framework": "google-adk",
    "model": "litellm_proxy/openai/gpt-6-luna",
    "input_tokens": 102,
    "output_tokens": 448,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:chatcmpl-EUkf2LnAOqaTgIBQVZqj28kBzMMvI"
    ],
    "tool_call_id": "",
    "input_preview": "Find a clear general definition of an \"agent trace\" in the context of AI/LLM agents and agent observability. Explain what it records, common structure (steps/spans/events), why used, and distinguish from a simple log if relevant. Avoid assu"
  },
  {
    "scope": "openinference.instrumentation.google_adk",
    "name": "agent_run [search_agent]",
    "display_name": "agent_run [search_agent]",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "search_agent",
    "framework": "google-adk",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.google_adk",
    "name": "invocation [research_app]",
    "display_name": "invocation [research_app]",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "google-adk",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "Find a clear general definition of an \"agent trace\" in the context of AI/LLM agents and agent observability. Explain what it records, common structure (steps/spans/events), why used, and distinguish from a simple log if relevant. Avoid assu"
  },
  {
    "scope": "openinference.instrumentation.google_adk",
    "name": "execute_tool search_agent",
    "display_name": "execute_tool search_agent",
    "root": false,
    "observation_type": "tool",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "google-adk",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "call_ofps8q8Xg6WoVFF46HgHX0Yw",
    "input_preview": "{\"request\": \"Find a clear general definition of an \\\"agent trace\\\" in the context of AI/LLM agents and agent observability. Explain what it records, common structure (steps/spans/events), why used, and distinguish from a simple log if relev"
  },
  {
    "scope": "openinference.instrumentation.google_adk",
    "name": "call_llm",
    "display_name": "call_llm",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "google-adk",
    "model": "litellm_proxy/openai/gpt-6-luna",
    "input_tokens": 107,
    "output_tokens": 73,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_05ca421ad4663192006ac07595d62087d0993af9aaad28f619"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.google_adk",
    "name": "call_llm",
    "display_name": "call_llm",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "writer_agent",
    "framework": "google-adk",
    "model": "litellm_proxy/openai/gpt-6-luna",
    "input_tokens": 160,
    "output_tokens": 100,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:chatcmpl-EUkf91AxaWvpWGinrwD3KJGmMjzCI"
    ],
    "tool_call_id": "",
    "input_preview": "Answer the user’s question “What is an agent trace?” Use the gathered facts: define it as structured, usually time-ordered record of an AI agent’s task flow, from request through operations/actions to result. Mention common captured items: "
  },
  {
    "scope": "openinference.instrumentation.google_adk",
    "name": "agent_run [writer_agent]",
    "display_name": "agent_run [writer_agent]",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "writer_agent",
    "framework": "google-adk",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.google_adk",
    "name": "invocation [research_app]",
    "display_name": "invocation [research_app]",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "google-adk",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "Answer the user’s question “What is an agent trace?” Use the gathered facts: define it as structured, usually time-ordered record of an AI agent’s task flow, from request through operations/actions to result. Mention common captured items: "
  },
  {
    "scope": "openinference.instrumentation.google_adk",
    "name": "execute_tool writer_agent",
    "display_name": "execute_tool writer_agent",
    "root": false,
    "observation_type": "tool",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "google-adk",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "call_nm9PNrWNcTXldGLDesgPOSMX",
    "input_preview": "{\"request\": \"Answer the user’s question “What is an agent trace?” Use the gathered facts: define it as structured, usually time-ordered record of an AI agent’s task flow, from request through operations/actions to result. Mention common cap"
  },
  {
    "scope": "openinference.instrumentation.google_adk",
    "name": "call_llm",
    "display_name": "call_llm",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "google-adk",
    "model": "litellm_proxy/openai/gpt-6-luna",
    "input_tokens": 476,
    "output_tokens": 127,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_03e867662441a795006ac0759cef4887d08a1f619189abb19a"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.google_adk",
    "name": "call_llm",
    "display_name": "call_llm",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "google-adk",
    "model": "litellm_proxy/openai/gpt-6-luna",
    "input_tokens": 718,
    "output_tokens": 103,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_0c6f01dfe4caa505006ac075a0b9ac87d089b95722c68f40a1"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.google_adk",
    "name": "agent_run [research_agent]",
    "display_name": "agent_run [research_agent]",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "google-adk",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "openinference.instrumentation.google_adk",
    "name": "invocation [research_app]",
    "display_name": "invocation [research_app]",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": true,
    "agent": "",
    "framework": "google-adk",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  }
]
