litellm-rust/crates/traces/tests/snapshots/normalize__langchain_simple.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "ChatOpenAI",
    "display_name": "ChatOpenAI",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_chat_model",
    "model": "openai/gpt-6-luna",
    "input_tokens": 12,
    "output_tokens": 230,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:chatcmpl-EUkfM51SrtYegN4WbzXFsqwgBuxST"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "model",
    "display_name": "model",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "openinference.instrumentation.langchain",
    "name": "research_agent",
    "display_name": "research_agent",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "langchain_create_agent",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  }
]
